<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MyApp!</string>
    <string name="app_name">DataChartApp</string>
    <string name="title">Database Chart</string>
    <string name="data_1">Enter data 1: </string>
    <string name="data_2">Enter data 2: </string>
    <string name="data_3">Enter data 3: </string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="view">View</string>
    <string name="view_all">View All</string>
    <string name="show_info">Show Information</string>
</resources>

